# python-basic

./: .gitignore  Readme.md
.github/workflows/: tests-runner-hw9.yml  tests-runner.yml
homeworks/: homework1.py
homeworks/homework2/: components.py  exceptions.py  main.py  vehicle.py
homeworks/homework3/: config.ini  models.py  requester.py
homeworks/homework4/: app.py  main.py  requirements.txt
homeworks/homework4/templates/: base.html
homeworks/homework4/templates/ships/: index.html
homeworks/homework4/views/: ships.csv
homeworks/homework5/: Dockerfile
homeworks/homework5/ship-showdown/: app.py  main.py  pyproject.toml
homeworks/homework6/: .gitignore  Dockerfile  docker-compose.yml
homeworks/homework6/ship-showdown/: app.py  config.py  main.py  pyproject.toml  startup.sh
homeworks/homework6/ship-showdown/migrations/versions/: 846bfb1ce07d_initial_migration.py
homeworks/homework6/ship-showdown/models/: __init__.py  ship.py
homeworks/homework6/ship-showdown/templates/ships/: add.html  index.html
homeworks/homework6/ship-showdown/views/: __init__.py  product.py
homeworks/homework7/: docker-compose.yaml
homeworks/homework7/shipyard/: manage.py
homeworks/homework7/shipyard/shipyard/: asgi.py  settings.py  urls.py  wsgi.py
homeworks/homework7/shipyard/showcase/: admin.py  models.py  tests.py  urls.py  views.py
homeworks/homework9/: app.py  requirements.txt
homeworks/homework9/templates/: base.html  index.html
homeworks/homework9/templates/ships/: detail.html
homeworks/homework9/views/: product.py
(+5 files in other folders)
