[tool.poetry]
name = "ship-showdown"
version = "1.0.0"
description = "Simple online shipyard"
authors = ["Vladimir C. <admin@nomail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.6"
Flask = "^1.1.2"
Flask-Migrate = "^2.5.3"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
